# django-admin-extra-buttons

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  .readthedocs.yaml  404.html  CHANGES  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: file-filters.yml
.github/workflows/: docs.yml  lint.yml  test.yml
api/button/: index.html
api/choice/: index.html
api/handlers/: index.html
api/link/: index.html
api/mixin/: index.html
api/utils/: index.html
api/view/: index.html
docs/: contributing.md  howto.md  index.md  install.md  mkdocs.yml  requirements.txt  to_gif.sh
docs/api/: button.md  choice.md  handlers.md  link.md  mixin.md  view.md
docs/css/: extra.css
docs/docs/: api.md  howto.md  index.md
docs/docs/api/: button.md  handlers.md  mixin.md  view.md
docs/source/api/: handlers.md  link.md
howto/: index.html
scripts/: check_version.py
search/: search_index.json
src/admin_extra_buttons/: __init__.py  api.py  apps.py  buttons.py  decorators.py  handlers.py  mixins.py  utils.py
src/admin_extra_buttons/static/: admin_extra_buttons.css  admin_extra_buttons.css.map  admin_extra_buttons.js  admin_extra_buttons.min.js  admin_extra_buttons.scss
src/admin_extra_buttons/templates/admin_extra_buttons/: action_page.html  change_form.html  change_list.html  confirm.html
src/admin_extra_buttons/templates/admin_extra_buttons/includes/: action_buttons.html  attrs.html  button.html  change_form_buttons.html  change_list_buttons.html  choice.html  styles.html
src/admin_extra_buttons/templatetags/: extra_buttons.py
tests/: .coveragerc  conftest.py  manage.py  test_admin.py  test_buttons.py  test_checks.py  test_choices.py  test_confirm.py  test_links.py  test_mixin.py  test_templatetags.py  test_upload.py  test_utils.py  test_views.py  test_visibility.py
tests/demoapp/: manage.py
tests/demoapp/demo/: admin.py  backends.py  models.py  settings.py  upload.py  urls.py
tests/demoapp/demo/migrations/: 0001_initial.py  0002_demomodel5_alter_demomodel1_options_and_more.py
tests/demoapp/demo/templates/admin_extra_buttons/: upload.html
tests/demoapp/demo/templates/demo/: test22.html
