[project]
name = "django-admin-extra-buttons"
version = "1.6.0"
description = "Django mixin to easily add buttons to any ModelAdmin"
readme = "README.md"
requires-python = ">=3.11"
classifiers=[
        'Environment :: Web Environment',
        'Operating System :: OS Independent',
        'Framework :: Django',
        'Framework :: Django :: 4.2',
        'Framework :: Django :: 5.0',
        'Framework :: Django :: 5.1',
        'License :: OSI Approved :: BSD License',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Topic :: Software Development :: Libraries :: Application Frameworks',
        'Topic :: Software Development :: Libraries :: Python Modules',
        'Intended Audience :: Developers'
    ]

dependencies = [
    "django>4,<6",
]
[project.urls]
Homepage = "https://github.com/saxix/django-admin-extra-buttonst"
Documentation = "https://github.com/saxix/django-admin-extra-buttons"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "markdown-include",
    "mkdocs-material>=9.5.36",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocstrings-python",
    "mdx_gh_links",
]

[tool.uv]
dev-dependencies = [
    #    "black>=24.8.0",
    #    "celery[pytest]>=5.4.0",
    #    "django-webtest>=1.9.12",
        "factory-boy>=3.3.1",
    #    "flake8>=7.1.1",
    #    "flower>=2.0.1",
    #    "ipython>=8.18.1",
    #    "isort>=5.13.2",
    #    "mypy>=1.11.2",
    #    "pdbpp>=0.10.3",
    #    "psycopg-binary>=3.2.2",
    #    "psycopg>=2.9.9",
    #    "pyquery>=2.0.1",
    #    "pytest-cov>=5.0.0",
        "pytest-django>=4.9.0",
    #    "pytest-echo>=1.7.3",
    "django-webtest>=1.9.12",
    #    "black>=24.8.0",
    #    "celery[pytest]>=5.4.0",
    #    "django-webtest>=1.9.12",
    #    "factory-boy>=3.3.1",
    #    "flake8>=7.1.1",
    #    "flower>=2.0.1",
    #    "ipython>=8.18.1",
    #    "isort>=5.13.2",
    #    "mypy>=1.11.2",
    #    "pdbpp>=0.10.3",
    #    "psycopg-binary>=3.2.2",
    #    "psycopg>=2.9.9",
        "pyquery>=2.0.1",
        "pytest-cov>=5.0.0",
    #    "pytest-django>=4.9.0",
    #    "pytest-echo>=1.7.3",
    "pytest>=8.3.3",
    "tox>=4.20.0",
]
