[pep8]
ignore = E501,E401,W391,E128,E261,E731
max-line-length = 160
exclude = .tox,migrations,.git,docs,diff_match_patch.py,deploy/**,settings,sheet_template


[flake8]
max-complexity = 12
max-line-length = 160
exclude = .tox,migrations,.git,docs,diff_match_patch.py,deploy/**,settings,sheet_template
ignore = E501,E401,W391,E128,E261,E731

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length=80
known_future_library=future,pies
known_standard_library = six
known_third_party = django
known_first_party = admin_extra_urls
multi_line_output = 0
not_skip = __init__.py
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[devpi:upload]
formats=bdist_wheel,sdist.tgz

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
