[flake8]
max-complexity = 14
max-line-length = 120
exclude = _plugin_template migrations settings python_twitter tweepy
ignore = E401,W391,E128,E261,E731,Q000,W504,W606
putty-ignore =


per-file-ignores =
    */__init__.py:F401,F403
    src/admin_extra_buttons/extras.py:F401
    src/admin_extra_buttons/api.py:F401

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
;forced_separate = django.contrib,django.utils
line_length = 120
known_future_library = future,pies
known_first_party = admin_extra_buttons
multi_line_output = 0
balanced_wrapping = true
;not_skip = __init__.py
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[metadata]
license_file = LICENSE

[wheel]
universal = 1

[devpi:upload]
formats=bdist_wheel,sdist.tgz

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
